Added Test API link

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,6 +9,7 @@ html
       nav.navigation
         a(href="/") Home
         a(href="/add-recipe") Add Recipe
+        a(href="/static/index.html") Test API
      
 
     main
